[bugFix:Navigation] Display none first element on mobile

--- a/web/assets/app/sass/blocs/_nav.sass
+++ b/web/assets/app/sass/blocs/_nav.sass
@@ -47,7 +47,7 @@
   width: 40%
   text-align: center
   &:nth-child(1)
-    display: block
+    display: none
     position: relative
     text-align: left
     .navSticky__label
